compiler/lyra/src/test/resources/semantic_errors/ReferenceSiblingWhenInitialized.ly
class Application {
    def main {
        Int x = 1, y = x*2; //error on x*2
    }
}